Update to use URI instead of URL.